# kovcheg

./: .coverage  .coveragerc  CHANGELOG.md  DEPLOYMENT_STATUS.md  Makefile  README.md  ark_comprehensive_test_report.json  ark_integration_test_report.json  coverage.json  l1_analysis_report.json  l5_agi_redteam_30day_report.json  requirements-dev.txt  srs.md  test_output.txt  testing.md
.github/workflows/: ark_ci_cd.yml  formal_proofs.yml  fuzzfarm.yml
cold_storage_archive/: ARK_v1.0_Archive_Manifest.json  ARK_v1.0_Complete_20250611_232321.tar.xz  Storage_Receipt.json
dao_contracts/circuits/: ark_guardian_circuit.circom
dkg_ceremony/: approval_signature.json
docs/deployment/: ark_deployment_guide.md
docs/reports/: 2025-06-ARK-validation-2025-06-11T23-19-58.200429-manifest.json  l3_characterization_data.json  l4_laser_fi_results.json  l6_environmental_test_report.json  release_note.md
firmware/: Cargo.toml
firmware/src/: boot.rs  crypto.rs  hardware.rs  lib.rs  main.rs  security.rs
firmware/tests/: pqc_tests.rs
formal/: DSL_Soundness.v  Kyber_CT.v  Makefile  Masking.v  PUF_CT.v  Voter_Skew.v
hardware/lab_scripts/: entropy_bench.py  og_latency.py
hardware/optic_gate/gdsii/: optic_gate_layout.gds
hardware/puf_heart/: ark_origin_fuse_log.json  origin_hash_fuse.py
hardware/puf_heart/rtl/: puf_core.sv
scripts/: coverage_report.py  export_evidence_bundle.py  final_verification.py  prepare_cold_storage.py
security_tests/: l5_agi_redteam_metrics.py
security_tests/fuzzfarm/: collector.py
security_tests/hydra_exodus/: hydra_controller.py  hydra_report.json  runner.py
security_tests/novel_vectors/: nt02_ethical_drift.json  nt02_ethical_drift.py  nt03_photon_scatter.json  nt03_photon_scatter.py  nt04_trng_heat_soak.json  nt04_trng_heat_soak.py  nt05_puf_ml_oracle.json  nt05_puf_ml_oracle.py  nt06_quantum_fault.json  nt06_quantum_fault.py  nt07_time_shift_patch.json  nt07_time_shift_patch.py  nt08_supply_chain_stego.json  nt08_supply_chain_stego.py  nt09_dao_stress.json  nt09_dao_stress.py  nt10_scriptural_fuzz.json  nt10_scriptural_fuzz.py
security_tests/side_channel/: side_channel_analysis.py
software/: __init__.py
software/attack_llm/: __init__.py
software/attack_llm/src/: __init__.py  lib.py
software/co_audit_ai/: Cargo.toml  __init__.py
software/co_audit_ai/src/: __init__.py  lib.py  lib.rs
software/cold_mirror/: Cargo.toml  __init__.py
software/cold_mirror/src/: __init__.py  lib.py  lib.rs
software/ethics_dsl/: Cargo.toml
software/ethics_dsl/src/: __init__.py  engine.rs  lib.py  lib.rs
software/network_sentinel/: Cargo.toml
software/network_sentinel/src/: lib.rs  main.rs  pqc_tls.rs
software/patch_orchestrator/: Cargo.toml  __init__.py
software/patch_orchestrator/src/: __init__.py  lib.py  lib.rs  main.rs
tests/integration/: ark_system_integration_test.py  pqc_integration_test.py
tests/quantum_simulation/: quantum_attack_simulator.py  run_quantum_tests.py
tests/unit/: conftest.py  test_aaa_level.py  test_attack_llm.py  test_coverage_boost.py  test_patch_orchestrator.py
