[package]
name = "co_audit_ai"
version = "3.0.0"
edition = "2021"
authors = ["ARK Development Team"]
description = "Co-Audit AI for formal verification and Biblical moral auditing"
license = "Biblical-Commons"
repository = "air-gapped"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Formal verification engines
z3 = { version = "0.12", features = ["static-link-z3"] }
cvc5 = { version = "0.1", optional = true }
vampire = { version = "0.1", optional = true }
eprover = { version = "0.1", optional = true }

# SMT-LIB and theorem proving
smt2parser = "0.1"
smtlib = "0.2"

# Logic and constraint solving
prolog = "0.2"
datalog = "0.1"
minisat = "0.1"

# Biblical text processing and analysis
regex = "1.10"
unicode-normalization = "0.1"
unicode-segmentation = "1.10"
scraper = "0.18"

# Machine learning for pattern detection
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
safetensors = "0.4"

# Cryptographic verification
blake3 = "1.5"
sha3 = "0.10"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"

# Post-quantum cryptography
kyber = "0.1"
dilithium = "0.1"
sphincs-plus = "0.1"

# Ethics and morality verification
ethics_dsl = { path = "../ethics_dsl" }
cold_mirror = { path = "../cold_mirror" }

# Data structures and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# File system and I/O
walkdir = "2.4"
tempfile = "3.8"
memmap2 = "0.9"

# Networking (air-gapped verification only)
reqwest = { version = "0.11", features = ["json"], optional = true }

# Logging and observability
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.22"

# Mathematical computation
ndarray = "0.15"
nalgebra = "0.32"
petgraph = "0.6"

# Code analysis and parsing
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-c = "0.20"

# Memory safety and security
zeroize = "1.7"
secrecy = "0.8"
constant_time_eq = "0.3"

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["full_verification"]
full_verification = ["cvc5", "vampire", "eprover"]
minimal = []
testing = ["reqwest"]

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
quickcheck = "1.0"

[[bin]]
name = "co_audit_ai"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.test]
opt-level = 2 