[package]
name = "network_sentinel"
version = "1.0.0"
edition = "2021"
authors = ["Gabriel <origin@ark-project.org>"]
description = "ARK Network Sentinel - Post-Quantum Secure Communications"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-rustls = "0.25"

# TLS and networking
rustls = { version = "0.22" }
rustls-pemfile = "2.0"
webpki-roots = "0.26"
ring = "0.17"

# Post-quantum cryptography
pqcrypto = "0.16"
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"

# Classical cryptography for hybrid mode
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
sha3 = "0.10"
blake3 = "1.5"

# Security
zeroize = { version = "1.7", features = ["derive"] }
constant_time_eq = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random
rand = "0.8"
rand_core = "0.6"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dependencies.criterion]
version = "0.5"
optional = true

[dev-dependencies]
proptest = "1.4"

[[bin]]
name = "network_sentinel"
path = "src/main.rs"

[lib]
name = "network_sentinel"
path = "src/lib.rs"

[features]
default = ["post-quantum"]
post-quantum = []
benchmarks = ["criterion"]



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
